Lab2/Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier FunDec error
    8       | error SEMI
    9       | Specifier error
   10       | Specifier ExtDecList error

   11 ExtDecList: VarDec
   12           | VarDec COMMA ExtDecList
   13           | VarDec COMMA error

   14 Specifier: TYPE
   15          | StructSpecifier

   16 StructSpecifier: STRUCT OptTag LC DefList RC
   17                | STRUCT Tag

   18 OptTag: ID
   19       | /* empty */

   20 Tag: ID

   21 VarDec: ID
   22       | VarDec LB INT RB

   23 FunDec: ID LP VarList RP
   24       | ID LP RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | ParamDec error VarList

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC
   30       | error RC

   31 StmtList: Stmt StmtList
   32         | /* empty */

   33 Stmt: Exp SEMI
   34     | CompSt
   35     | RETURN Exp SEMI
   36     | IF LP Exp RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | error SEMI

   40 DefList: Def DefList
   41        | /* empty */

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList
   46        | Dec error DecList

   47 Dec: VarDec
   48    | VarDec ASSIGNOP Exp
   49    | VarDec ASSIGNOP error

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | ID LP error RP
   69    | LB error RB

   70 Args: Exp COMMA Args
   71     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 10 13 27 30 39 43 46 49 68 69
INT (258) 22 66
FLOAT (259) 67
SEMI (260) 4 5 8 33 35 39 42 43
COMMA (261) 12 13 25 45 70
ASSIGNOP (262) 48 49 50
RELOP (263) 53
ID (264) 18 20 21 23 24 61 62 64 65 68
TYPE (265) 14
DOT (266) 64
PLUS (267) 54
MINUS (268) 55 59
STAR (269) 56
DIV (270) 57
AND (271) 51
OR (272) 52
NOT (273) 60
LP (274) 23 24 36 37 38 58 61 62 68
RP (275) 23 24 36 37 38 58 61 62 68
LB (276) 22 63 69
RB (277) 22 63 69
LC (278) 16 29
RC (279) 16 29 30
STRUCT (280) 16 17
RETURN (281) 35
IF (282) 36 37
ELSE (283) 37
WHILE (284) 38
LOWER_THAN_ELSE (285)
NEG (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8 9 10, on right: 2
ExtDecList (36)
    on left: 11 12 13, on right: 4 10 12
Specifier (37)
    on left: 14 15, on right: 4 5 6 7 9 10 28 42 43
StructSpecifier (38)
    on left: 16 17, on right: 15
OptTag (39)
    on left: 18 19, on right: 16
Tag (40)
    on left: 20, on right: 17
VarDec (41)
    on left: 21 22, on right: 11 12 13 22 28 47 48 49
FunDec (42)
    on left: 23 24, on right: 6 7
VarList (43)
    on left: 25 26 27, on right: 23 25 27
ParamDec (44)
    on left: 28, on right: 25 26 27
CompSt (45)
    on left: 29 30, on right: 6 34
StmtList (46)
    on left: 31 32, on right: 29 31
Stmt (47)
    on left: 33 34 35 36 37 38 39, on right: 31 36 37 38
DefList (48)
    on left: 40 41, on right: 16 29 40
Def (49)
    on left: 42 43, on right: 40
DecList (50)
    on left: 44 45 46, on right: 42 45 46
Dec (51)
    on left: 47 48 49, on right: 44 45 46
Exp (52)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69, on right: 33 35 36 37 38 48 50 51 52 53 54 55 56 57 58 59
    60 63 64 70 71
Args (53)
    on left: 70 71, on right: 61 70


state 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 1

    8 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


state 2

   14 Specifier: TYPE .

    $default  reduce using rule 14 (Specifier)


state 3

   16 StructSpecifier: STRUCT . OptTag LC DefList RC
   17                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 19 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


state 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


state 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . FunDec error
    9       | Specifier . error
   10       | Specifier . ExtDecList error

    error  shift, and go to state 15
    SEMI   shift, and go to state 16
    ID     shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


state 8

   15 Specifier: StructSpecifier .

    $default  reduce using rule 15 (Specifier)


state 9

    8 ExtDef: error SEMI .

    $default  reduce using rule 8 (ExtDef)


state 10

   18 OptTag: ID .
   20 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 20 (Tag)


state 11

   16 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 21


state 12

   17 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 17 (StructSpecifier)


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 15

    9 ExtDef: Specifier error .

    $default  reduce using rule 9 (ExtDef)


state 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


state 17

   21 VarDec: ID .
   23 FunDec: ID . LP VarList RP
   24       | ID . LP RP

    LP  shift, and go to state 22

    $default  reduce using rule 21 (VarDec)


state 18

    4 ExtDef: Specifier ExtDecList . SEMI
   10       | Specifier ExtDecList . error

    error  shift, and go to state 23
    SEMI   shift, and go to state 24


state 19

   11 ExtDecList: VarDec .
   12           | VarDec . COMMA ExtDecList
   13           | VarDec . COMMA error
   22 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 11 (ExtDecList)


state 20

    6 ExtDef: Specifier FunDec . CompSt
    7       | Specifier FunDec . error

    error  shift, and go to state 27
    LC     shift, and go to state 28

    CompSt  go to state 29


state 21

   16 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


state 22

   23 FunDec: ID LP . VarList RP
   24       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


state 23

   10 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 10 (ExtDef)


state 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 25

   12 ExtDecList: VarDec COMMA . ExtDecList
   13           | VarDec COMMA . error

    error  shift, and go to state 37
    ID     shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 19


state 26

   22 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 40


state 27

    7 ExtDef: Specifier FunDec error .
   30 CompSt: error . RC

    RC  shift, and go to state 41

    $default  reduce using rule 7 (ExtDef)


state 28

   29 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 32


state 29

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


state 30

   42 Def: Specifier . DecList SEMI
   43    | Specifier . error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


state 31

   16 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 47


state 32

   40 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 48
    Def              go to state 32


state 33

   24 FunDec: ID LP RP .

    $default  reduce using rule 24 (FunDec)


state 34

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  go to state 49


state 35

   23 FunDec: ID LP VarList . RP

    RP  shift, and go to state 50


state 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .
   27        | ParamDec . error VarList

    error  shift, and go to state 51
    COMMA  shift, and go to state 52

    RP  reduce using rule 26 (VarList)


state 37

   13 ExtDecList: VarDec COMMA error .

    $default  reduce using rule 13 (ExtDecList)


state 38

   21 VarDec: ID .

    $default  reduce using rule 21 (VarDec)


state 39

   12 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 12 (ExtDecList)


state 40

   22 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 53


state 41

   30 CompSt: error RC .

    $default  reduce using rule 30 (CompSt)


state 42

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


state 43

   43 Def: Specifier error . SEMI

    SEMI  shift, and go to state 69


state 44

   22 VarDec: VarDec . LB INT RB
   47 Dec: VarDec .
   48    | VarDec . ASSIGNOP Exp
   49    | VarDec . ASSIGNOP error

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 26

    $default  reduce using rule 47 (Dec)


state 45

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 71


state 46

   44 DecList: Dec .
   45        | Dec . COMMA DecList
   46        | Dec . error DecList

    error  shift, and go to state 72
    COMMA  shift, and go to state 73

    SEMI  reduce using rule 44 (DecList)


state 47

   16 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 16 (StructSpecifier)


state 48

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


state 49

   22 VarDec: VarDec . LB INT RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


state 50

   23 FunDec: ID LP VarList RP .

    $default  reduce using rule 23 (FunDec)


state 51

   27 VarList: ParamDec error . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 74
    ParamDec         go to state 36


state 52

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 75
    ParamDec         go to state 36


state 53

   22 VarDec: VarDec LB INT RB .

    $default  reduce using rule 22 (VarDec)


state 54

   30 CompSt: error . RC
   39 Stmt: error . SEMI

    SEMI  shift, and go to state 76
    RC    shift, and go to state 41


state 55

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 56

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 57

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .
   68    | ID . LP error RP

    LP  shift, and go to state 77

    $default  reduce using rule 65 (Exp)


state 58

   59 Exp: MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 78


state 59

   60 Exp: NOT . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 79


state 60

   58 Exp: LP . Exp RP

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 80


state 61

   69 Exp: LB . error RB

    error  shift, and go to state 81


state 62

   35 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 82


state 63

   36 Stmt: IF . LP Exp RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 83


state 64

   38 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 84


state 65

   34 Stmt: CompSt .

    $default  reduce using rule 34 (Stmt)


state 66

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


state 67

   31 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LB      shift, and go to state 61
    LC      shift, and go to state 28
    RETURN  shift, and go to state 62
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64

    RC  reduce using rule 32 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 86
    Stmt      go to state 67
    Exp       go to state 68


state 68

   33 Stmt: Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 87
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


state 69

   43 Def: Specifier error SEMI .

    $default  reduce using rule 43 (Def)


state 70

   48 Dec: VarDec ASSIGNOP . Exp
   49    | VarDec ASSIGNOP . error

    error  shift, and go to state 98
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 99


state 71

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


state 72

   46 DecList: Dec error . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 100
    Dec      go to state 46


state 73

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 101
    Dec      go to state 46


state 74

   27 VarList: ParamDec error VarList .

    $default  reduce using rule 27 (VarList)


state 75

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


state 76

   39 Stmt: error SEMI .

    $default  reduce using rule 39 (Stmt)


state 77

   61 Exp: ID LP . Args RP
   62    | ID LP . RP
   68    | ID LP . error RP

    error  shift, and go to state 102
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 103
    LB     shift, and go to state 61

    Exp   go to state 104
    Args  go to state 105


state 78

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 97

    $default  reduce using rule 59 (Exp)


state 79

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 97

    $default  reduce using rule 60 (Exp)


state 80

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 106
    LB        shift, and go to state 97


state 81

   69 Exp: LB error . RB

    RB  shift, and go to state 107


state 82

   35 Stmt: RETURN Exp . SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 108
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97


state 83

   36 Stmt: IF LP . Exp RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 109


state 84

   38 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 110


state 85

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


state 86

   31 StmtList: Stmt StmtList .

    $default  reduce using rule 31 (StmtList)


state 87

   33 Stmt: Exp SEMI .

    $default  reduce using rule 33 (Stmt)


state 88

   50 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 111


state 89

   53 Exp: Exp RELOP . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 112


state 90

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 113


state 91

   54 Exp: Exp PLUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 114


state 92

   55 Exp: Exp MINUS . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 115


state 93

   56 Exp: Exp STAR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 116


state 94

   57 Exp: Exp DIV . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 117


state 95

   51 Exp: Exp AND . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 118


state 96

   52 Exp: Exp OR . Exp

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 119


state 97

   63 Exp: Exp LB . Exp RB

    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    LB     shift, and go to state 61

    Exp  go to state 120


state 98

   49 Dec: VarDec ASSIGNOP error .

    $default  reduce using rule 49 (Dec)


state 99

   48 Dec: VarDec ASSIGNOP Exp .
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 48 (Dec)


state 100

   46 DecList: Dec error DecList .

    $default  reduce using rule 46 (DecList)


state 101

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


state 102

   68 Exp: ID LP error . RP

    RP  shift, and go to state 121


state 103

   62 Exp: ID LP RP .

    $default  reduce using rule 62 (Exp)


state 104

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   70 Args: Exp . COMMA Args
   71     | Exp .

    COMMA     shift, and go to state 122
    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 71 (Args)


state 105

   61 Exp: ID LP Args . RP

    RP  shift, and go to state 123


state 106

   58 Exp: LP Exp RP .

    $default  reduce using rule 58 (Exp)


state 107

   69 Exp: LB error RB .

    $default  reduce using rule 69 (Exp)


state 108

   35 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 35 (Stmt)


state 109

   36 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 124
    LB        shift, and go to state 97


state 110

   38 Stmt: WHILE LP Exp . RP Stmt
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    RP        shift, and go to state 125
    LB        shift, and go to state 97


state 111

   50 Exp: Exp . ASSIGNOP Exp
   50    | Exp ASSIGNOP Exp .
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 88
    RELOP     shift, and go to state 89
    DOT       shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    AND       shift, and go to state 95
    OR        shift, and go to state 96
    LB        shift, and go to state 97

    $default  reduce using rule 50 (Exp)


state 112

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   53    | Exp RELOP Exp .
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT    shift, and go to state 90
    PLUS   shift, and go to state 91
    MINUS  shift, and go to state 92
    STAR   shift, and go to state 93
    DIV    shift, and go to state 94
    LB     shift, and go to state 97

    $default  reduce using rule 53 (Exp)


state 113

   64 Exp: Exp DOT ID .

    $default  reduce using rule 64 (Exp)


state 114

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   54    | Exp PLUS Exp .
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT   shift, and go to state 90
    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 97

    $default  reduce using rule 54 (Exp)


state 115

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   55    | Exp MINUS Exp .
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT   shift, and go to state 90
    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    LB    shift, and go to state 97

    $default  reduce using rule 55 (Exp)


state 116

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   56    | Exp STAR Exp .
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 97

    $default  reduce using rule 56 (Exp)


state 117
